# Event-Management-System

./: .gitignore  README.md
Event Management System/tru-event-management/: CMakeLists.txt
Event Management System/tru-event-management/src/: main.cpp
Event Management System/tru-event-management/src/core/: Event.cpp  Event.h  User.cpp  User.h
Event Management System/tru-event-management/src/managers/: BookingManager.cpp  BookingManager.h  EventManager.cpp  EventManager.h
Event Management System/tru-event-management/src/rooms/: ConferenceRoom.cpp  ConferenceRoom.h  IRoom.h  Room.cpp  Room.h  RoomFactory.cpp  RoomFactory.h
Event Management System/tru-event-management/src/users/: Coordinator.cpp  Coordinator.h  Faculty.cpp  Faculty.h  Student.cpp  Student.h
Event Management System/tru-event-management/src/utils/: Utils.cpp  Utils.h
